# cashmere

./: .gitignore  CHANGELOG.md  Cargo.toml  LSP_SETUP.md  README.md  install.sh
.github/workflows/: build.yml
examples/: workflow_example.ts
src/: linter.rs  lsp.rs  main.rs
tests/: cli.rs
