[package]
name = "cashmere"
version = "0.5.0"
edition = "2021"
description = "A fast linter for Cloudflare Workflows TypeScript/JavaScript code, built with Rust."

[dependencies]
oxc_parser = "0.108"
oxc_ast = "0.108"
oxc_span = "0.108"
oxc_allocator = "0.108"
walkdir = "2"
clap = { version = "4", features = ["derive"] }
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dashmap = "5"

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"
